TFP-4174 vurder perioder med frilans i opptjeningsvilkår (#2423)
* TFP-4174 vurder perioder med frilans i opptjeningsvilkår

* Fikse testfeil

* Lefover imports